# File-processing-and-Server-operations-library

./: .gitattributes  .gitignore  CMakeLists.txt  README.MD  library.h
Errorhandler/: ErrorCodes.h  ErrorHandler.cpp  ErrorHandler.h
FileCompression/: CompressionAPI.cpp  CompressionAPI.h  ICompressor.h
FileCompression/CompressionMethods/AssistAlgorithms/Huffman/: Huffman.cpp  Huffman.h
FileCompression/CompressionMethods/AssistAlgorithms/LZ77/: LZ77.cpp  LZ77.h
FileCompression/CompressionMethods/H264/: H264Compressor.cpp  H264Compressor.h
FileCompression/CompressionMethods/JPEG/: JPEGCompressor.cpp  JPEGCompressor.h
FileCompression/CompressionMethods/LZMA/: LZMACompressor.cpp  LZMACompressor.h
FileCompression/CompressionMethods/ZIP/: ZIPCompressor.cpp  ZIPCompressor.h
FileComrepssion/: CompressionAPI.cpp  CompressionAPI.h
Google_tests/: AssistAlgorithmTests.cpp  CMakeLists.txt  CompressionMethodTests.cpp  ErrorhandlerTests.cpp  FileCompressionTest.cpp  FileDeCompressionTest.cpp
Google_tests/IntegrationTests/: LZ77IntegrationTests.cpp
Google_tests/TestFiles/Testassists/DummyfileGenerator/: dummyFileGenerator.cpp  dummyFileGenerator.h
Google_tests/Testassists/FileLocator/: FileLocator.cpp  FileLocator.h
Google_tests/UnitTests/: LZZ77UnitTests.cpp
Google_tests/lib/: CMakeLists.txt
documentation/: FileCompression.md  FutureIdeas.MD
